--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,12 +6,37 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>355</width>
-    <height>299</height>
+    <width>424</width>
+    <height>450</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">QPushButton{
+background-color:rgb(125, 255, 155);
+font-size:20pt;
+color:rgb(77, 77, 77);
+ box-shadow: 0 2px 3px rgba(0, 0, 0.1, 0.3);
+}
+QPushButton:hover{
+background-color:rgb(85, 255, 0);
+color:rgb(0, 0, 0);
+}
+QPushButton:pressed{
+background-color:rgb(0, 255, 0);
+color:rgb(0, 0, 0);
+}
+
+QLineEdit{
+font-size:30pt;
+    padding: 8px 15px;
+    border-radius: 12px;
+    border: 1px solid rgb(220, 220, 220);
+    margin: 10px;
+    box-shadow: inset 0 2px 3px rgba(0, 0, 0, 0.05); 
+}</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -369,7 +394,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>355</width>
+     <width>424</width>
      <height>21</height>
     </rect>
    </property>
